# notebooks

./: README.md  pyproject.toml
src/: dense_moe_net.ipynb  epo.ipynb  flow_matching.ipynb  flux.ipynb  flux_interp.ipynb  magnet.ipynb  monotonic_net.ipynb  resnet_ft.ipynb
src/monotonic/: y_list_monotonicExample-UpFalse-InterpFalse.pt  y_list_robustExample.pt  y_robust_list_monotonicExample-UpFalse-InterpFalse.pt  y_robust_list_robustExample.pt
src/res/: mpl-config
