[project]
name = "notebooks"
version = "0.1.0"
description = "A collection of notebooks of various ideas and proof of concepts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "regex>=2024.11.6",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
    "wandb>=0.19.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system == 'darwin'" }, 
    { index = "pytorch-cu124", marker = "platform_system == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
